# dbrt

./: CMakeLists.txt  README.md  package.xml
config/: camera.yaml  object_config.yaml  rbc_particle_filter_tracker.yaml  robot_config.yaml  tracking.rviz
config/arm/: camera.yaml  rbc_particle_filter_tracker.yaml  robot_simulation_apollo.yaml  tracking_data_set.yaml
include/brt/: robot_tracker_publisher.h  robot_tracker_publisher.hpp
include/brt/states/: robot_state.hpp
include/brt/trackers/: rbc_particle_filter_robot_tracker.hpp  robot_tracker.hpp
include/brt/utils/: kinematics_from_urdf.hpp  urdf_object_loader.hpp
include/dbrt/: fusion_robot_tracker.h  fusion_tracker.h  fusion_tracker_node.h  fusion_tracker_node.hpp  gaussian_joint_filter_robot_tracker.hpp  rbc_particle_filter_robot_tracker.hpp  robot_publisher.h  robot_publisher.hpp  robot_state.hpp  robot_tracker.hpp  robot_tracker_publisher.h  robot_tracker_publisher.hpp  rotary_tracker.hpp  visual_tracker.hpp  visual_tracker_ros.h
include/dbrt/util/: image_publisher.hpp  image_visualizer.hpp  kinematics_from_urdf.hpp  part_mesh_model.hpp  robot_emulator.hpp  robot_tracking_dataset.hpp  robot_transformer.hpp  urdf_object_loader.hpp  virtual_robot.h
include/fast_filtering/distributions/: exponential_distribution.hpp  gaussian.hpp  standard_gaussian.hpp  statistical_gaussian.hpp  sum_of_deltas.hpp  truncated_gaussian.hpp  uniform_distribution.hpp
include/fast_filtering/filters/: filter_context.hpp
include/fast_filtering/states/: floating_body_system.hpp  rigid_body_system.hpp
include/fast_filtering/utils/: assertions.hpp  distribution_test.hpp  helper_functions.hpp  log_erfc.hpp  macros.hpp  profiling.hpp  random_seed.hpp  traits.hpp
include/pose_tracking/: rao_blackwell_coordinate_particle_filter.hpp
include/pose_tracking_interface/trackers/: object_tracker.hpp  robot_tracker.hpp
include/pose_tracking_interface/utils/: kinematics_from_urdf.hpp
include/state_filtering/states/: robot_state.hpp
include/state_filtering/trackers/: object_tracker.hpp  old_object_tracker.hpp  robot_tracker.hpp
include/state_filtering/utils/: kinematics_from_urdf.hpp  pcl_interface.hpp  robot_tracking_dataset.hpp  ros_interface.hpp
launch/: old_object_tracker.launch  rbc_particle_filter_robot_tracker.launch  rbc_particle_filter_robot_tracker_offline.launch  rbc_particle_filter_robot_tracker_simulation.launch
source/dbrt/: arm_robot_emulator_node.cpp  fusion_tracker.cpp  kinematics_from_urdf.cpp  kinematics_from_urdf.h  part_mesh_model.h  part_mesh_model.hpp  robot_publisher.cpp  robot_publisher.h  robot_publisher.hpp  robot_state.h  robot_state.hpp  robot_tracker.cpp  robot_tracker.hpp  robot_transformer.cpp  robot_transformer.h  robot_transforms_provider.cpp  robot_transforms_provider.h  urdf_object_loader.cpp  urdf_object_loader.h  visual_tracker.cpp
source/dbrt/builder/: exceptions.h  factorized_transition_builder.h  factorized_transition_builder.hpp  robot_rb_observation_model_builder.cpp  robot_rb_sensor_builder.cpp  rotary_sensor_builder.h  rotary_sensor_builder.hpp  rotary_tracker_builder.h  rotary_tracker_builder.hpp  transition_builder.h  transition_builder.hpp  visual_tracker_builder.h  visual_tracker_builder.hpp  visual_tracker_factory.cpp  visual_tracker_factory.h
source/dbrt/tracker/: fusion_tracker.cpp  fusion_tracker.h  fusion_tracker_factory.cpp  fusion_tracker_factory.h  fusion_tracker_node.cpp  fusion_tracker_simulation_node.cpp  robot_tracker.cpp  robot_tracker.h  rotary_tracker.cpp  rotary_tracker.h  rotary_tracker_factory.cpp  rotary_tracker_factory.h  rotary_tracker_node.cpp  visual_tracker.cpp  visual_tracker.h  visual_tracker_factory.cpp  visual_tracker_factory.h  visual_tracker_node.cpp  visual_tracker_ros.cpp  visual_tracker_ros.h
source/dbrt/util/: arm_robot_emulator_node.cpp  camera_data_factory.cpp  camera_data_factory.h  kinematics_factory.cpp  kinematics_factory.h  parameter_tools.h  parameter_tools.hpp  robot_animator.h  robot_emulator.h  robot_emulator.hpp  robot_emulator_node.cpp  robot_transformer.cpp  urdf_object_loader.cpp
src/brt/: robot_tracker_node.cpp  robot_tracker_publisher.cpp
src/brt/trackers/: rbc_particle_filter_robot_tracker.cpp  rbc_particle_filter_robot_tracker_node.cpp  robot_tracker.cpp
src/brt/utils/: image_publisher.cpp  image_visualizer.cpp  kinematics_from_urdf.cpp  robot_tracking_dataset.cpp  urdf_object_loader.cpp
src/dbrt/: arm_robot_emulator_node.cpp  fusion_robot_tracker.cpp  fusion_robot_tracker_simulation_node.cpp  fusion_tracker.cpp  fusion_tracker_node.cpp  fusion_tracker_simulation_node.cpp  fusion_tracker_simulation_node.cpp.orig  gaussian_joint_filter_robot_tracker.cpp  rbc_particle_filter_robot_tracker.cpp  rbc_particle_filter_robot_tracker.cpp.orig  rbc_particle_filter_robot_tracker_node.cpp  rbc_particle_filter_robot_tracker_offline_node.cpp  rbc_particle_filter_robot_tracker_simulation_node.cpp  robot_publisher.cpp  robot_publisher.h  robot_state.hpp  robot_tracker.cpp  robot_tracker_evaluation_node.cpp  robot_tracker_node.cpp  robot_tracker_publisher.cpp  rotary_tracker.cpp  rotary_tracker_factory.cpp  rotary_tracker_node.cpp  visual_tracker.cpp  visual_tracker_node.cpp  visual_tracker_offline_node.cpp  visual_tracker_ros.cpp  visual_tracker_simulation_node.cpp
src/dbrt/builder/: factorized_transition_builder.hpp  visual_tracker_builder.cpp  visual_tracker_builder.hpp  visual_tracker_factory.cpp
src/dbrt/util/: image_publisher.cpp  image_visualizer.cpp  kinematics_from_urdf.cpp  kinematics_from_urdf.hpp  part_mesh_model.hpp  robot_emulator.hpp  robot_tracking_dataset.cpp  robot_transformer.cpp  urdf_object_loader.cpp
src/pose_tracking_interface/trackers/: object_tracker.cpp  object_tracker_node.cpp  robot_tracker.cpp  robot_tracker_evaluation_node.cpp
tests/: ff_gaussian_test.cpp  fukf_dummy_models.hpp  fukf_hash_tests.cpp  fukf_llt_diagonal_test.cpp  fukf_partitioned_ut_test.cpp  fukf_predict_test.cpp  fukf_smw_inversion_test.cpp  fukf_square_root_test.cpp  fukf_stub_models.hpp  fukf_ut_test.cpp
(+99 files in other folders)
